--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@ if(wish === true) {
 
 var i = wishlist.findIndex(e => e.user==user&& e.product==id)
 
-wishlist.splice(i, i)
+wishlist.splice(i, i).then(() => {
 
 var hash = CryptoJS.AES.encrypt(JSON.stringify(wishlist), key, {
     iv: iv,
@@ -614,13 +614,13 @@ b.saveIPFS().then(() => {
   setWlist(wishlist)
   setWishhlist(wishlist)
 })
-
+})
 } else {
 
 wishlist.push({
   user : user,
   product : id
-})
+}).then(() => {
 
 var hash = CryptoJS.AES.encrypt(JSON.stringify(wishlist), key, {
     iv: iv,
@@ -637,7 +637,7 @@ b.saveIPFS().then(() => {
   setWlist(wishlist)
   setWishhlist(wishlist)
 })
-
+})
 }
 }
 
