--- a/index.html
+++ b/index.html
@@ -597,9 +597,7 @@ if(wish === true) {
 
 var i = wishlist.findIndex(e => e.user==user&& e.product==id)
 
-wishlist.splice(i, i).then(() => {
-
-var hash = CryptoJS.AES.encrypt(JSON.stringify(wishlist), key, {
+var hash = CryptoJS.AES.encrypt(JSON.stringify(wishlist.splice(i, i)), key, {
     iv: iv,
     mode: CryptoJS.mode.CBC,
     padding: CryptoJS.pad.Pkcs7
@@ -614,15 +612,10 @@ b.saveIPFS().then(() => {
   setWlist(wishlist)
   setWishhlist(wishlist)
 })
-})
+
 } else {
 
-wishlist.push({
-  user : user,
-  product : id
-}).then(() => {
-
-var hash = CryptoJS.AES.encrypt(JSON.stringify(wishlist), key, {
+var hash = CryptoJS.AES.encrypt(JSON.stringify( wishlist.push({user : user,product : id}) ), key, {
     iv: iv,
     mode: CryptoJS.mode.CBC,
     padding: CryptoJS.pad.Pkcs7
@@ -637,7 +630,7 @@ b.saveIPFS().then(() => {
   setWlist(wishlist)
   setWishhlist(wishlist)
 })
-})
+
 }
 }
 
