--- a/index.html
+++ b/index.html
@@ -597,7 +597,9 @@ if(wish === true) {
 
 var i = wishlist.findIndex(e => e.user==user&& e.product==id)
 
-var hash = CryptoJS.AES.encrypt(JSON.stringify(wishlist.splice(i, i)), key, {
+wishlist.splice(i, i)
+const x = wishhlist
+var hash = CryptoJS.AES.encrypt(JSON.stringify(x), key, {
     iv: iv,
     mode: CryptoJS.mode.CBC,
     padding: CryptoJS.pad.Pkcs7
@@ -614,8 +616,9 @@ b.saveIPFS().then(() => {
 })
 
 } else {
-
-var hash = CryptoJS.AES.encrypt(JSON.stringify( wishlist.push({user : user,product : id}) ), key, {
+wishlist.push({user : user,product : id})
+const x = wishlist;
+var hash = CryptoJS.AES.encrypt(JSON.stringify(x), key, {
     iv: iv,
     mode: CryptoJS.mode.CBC,
     padding: CryptoJS.pad.Pkcs7
