--- a/index.html
+++ b/index.html
@@ -617,7 +617,10 @@ b.saveIPFS().then(() => {
 
 } else {
 
-
+wishlist.push({
+  user : user,
+  product : id
+})
 
 const x = wishlist;
 var hash = CryptoJS.AES.encrypt(JSON.stringify(x), key, {
