--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ return response.json().then((k) => {
 
 const [wishhlist, setWishhlist] = useState(wishlist)
 const [wlist, setWlist] = useState(wishlist)
-console.log(wlist)
+console.log(JSON.stringify(wlist))
 sessionStorage.setItem('search',"");
 
 //Authentication...
