--- a/index.html
+++ b/index.html
@@ -127,9 +127,7 @@ return response.json().then((k) => {
 })
 }, [])
 
-const [wishhlist, setWishhlist] = useState(wishlist)
 const [wlist, setWlist] = useState(wishlist)
-console.log(JSON.stringify(wishlist))
 sessionStorage.setItem('search',"");
 
 //Authentication...
@@ -580,7 +578,7 @@ const [wish, setWish] = useState(false)
 const [wishIcon, setWishIcon] = useState("far fa-heart")
 
 useEffect(() => {
-  if(JSON.stringify(wlist).includes(id)) {
+  if(JSON.stringify(wlist.filter(e=>e.user===user)).includes(id)) {
     setWish(true)
     setWishIcon("fas fa-heart")
   } else {
@@ -598,8 +596,8 @@ if(wish === true) {
 var i = wishlist.findIndex(e => e.user==user&& e.product==id)
 
 wishlist.splice(i, i)
-const x = wishhlist
-var hash = CryptoJS.AES.encrypt(JSON.stringify(x), key, {
+
+var hash = CryptoJS.AES.encrypt(JSON.stringify(wishlist), key, {
     iv: iv,
     mode: CryptoJS.mode.CBC,
     padding: CryptoJS.pad.Pkcs7
@@ -612,7 +610,6 @@ b.saveIPFS().then(() => {
   db.doc('wishlist').set({ ipfs : b.ipfs() })
   setWishIcon("far fa-heart")
   setWlist(wishlist)
-  setWishhlist(wishlist)
 })
 
 } else {
@@ -622,8 +619,7 @@ wishlist.push({
   product : id
 })
 
-const x = wishlist;
-var hash = CryptoJS.AES.encrypt(JSON.stringify(x), key, {
+var hash = CryptoJS.AES.encrypt(JSON.stringify(wishlist), key, {
     iv: iv,
     mode: CryptoJS.mode.CBC,
     padding: CryptoJS.pad.Pkcs7
@@ -636,7 +632,6 @@ b.saveIPFS().then(() => {
   db.doc('wishlist').set({ ipfs : b.ipfs() })
   setWishIcon("fas fa-heart")
   setWlist(wishlist)
-  setWishhlist(wishlist)
 })
 
 }
