--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ return response.json().then((k) => {
     padding: CryptoJS.pad.Pkcs7
   }).toString(CryptoJS.enc.Utf8)
   setWishlist(JSON.parse(object))
-  setWlist(Wishlist)
-  console.log(JSON.stringify(wishlist))
+  setWlist(wishlist)
+  console.log(JSON.stringify(wlist))
 })
 })
 }, [])
