--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ return response.json().then((k) => {
   }).toString(CryptoJS.enc.Utf8)
   setWishlist(JSON.parse(object))
   setWlist(JSON.parse(object))
-  console.log(JSON.parse(object))
+  console.log(object)
 })
 })
 }, [])
