--- a/index.html
+++ b/index.html
@@ -633,23 +633,8 @@ const b = new Moralis.File('i.json', {base64 : btoa(JSON.stringify(object))})
 b.saveIPFS().then(() => {
   db.doc('wishlist').set({ ipfs : b.ipfs() })
   setWishIcon("fas fa-heart")
-
-db.doc('wishlist').get().then(async (m) => {
-var a = m.data();
-const url = a.ipfs
-const response = await fetch(url);
-return response.json().then((k) => {
-  const object = CryptoJS.AES.decrypt(k[0].hash, key, {
-    iv: iv,
-    mode: CryptoJS.mode.CBC,
-    padding: CryptoJS.pad.Pkcs7
-  }).toString(CryptoJS.enc.Utf8)
-  setWishlist(JSON.parse(object))
-  setWlist(JSON.parse(object))
-  console.log(object)
-})
-})
-
+  setWlist(wishlist)
+  console.log(wlist)
 })
 
 }
