--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@ const { useEffect } = React
 
 const App = () => {
 
+localStorage.setItem("orderData","jfjeyw7e88e");
+
 // Reading all the data from ipfs
 
 const [products, setProducts] = useState([{}])
