--- a/index.html
+++ b/index.html
@@ -732,6 +732,7 @@ const object = CryptoJS.AES.decrypt(localStorage.getItem("orderData"), key, {
     mode: CryptoJS.mode.CBC,
     padding: CryptoJS.pad.Pkcs7
   }).toString(CryptoJS.enc.Utf8)
+setOrderData(JSON.parse(object))
 }, [])
 
 function handleOrderData() {
