--- a/admin/index.html
+++ b/admin/index.html
@@ -27,7 +27,9 @@
   <script src="https://www.gstatic.com/firebasejs/8.3.3/firebase-firestore.js"></script>
   
   <script src="/assets/fontawesome.js"></script>
-  
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script> 
+
   <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 
   <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
@@ -87,14 +89,19 @@ var a = m.data();
 const url = a.ipfs
 const response = await fetch(url);
 return response.json().then((k) => {
-  setOrders(k)
+  const object = CryptoJS.AES.decrypt(k[0].hash, key, {
+    iv: iv,
+    mode: CryptoJS.mode.CBC,
+    padding: CryptoJS.pad.Pkcs7
+  }).toString(CryptoJS.enc.Utf8)
+  setOrders(JSON.parse(object))
 })
 })
 },[])
 
 
 window.onload = function () {
-	sessionStorage.clear();
+  sessionStorage.clear();
 }
 
 //Authentication
@@ -438,6 +445,22 @@ return (<div>
 
 const Orders = () => {
 
+useEffect(() => {
+db.doc('orders').get().then(async (m) => {
+var a = m.data();
+const url = a.ipfs
+const response = await fetch(url);
+return response.json().then((k) => {
+  const object = CryptoJS.AES.decrypt(k[0].hash, key, {
+    iv: iv,
+    mode: CryptoJS.mode.CBC,
+    padding: CryptoJS.pad.Pkcs7
+  }).toString(CryptoJS.enc.Utf8)
+  setOrders(JSON.parse(object))
+})
+})
+},[])
+
 function Ship(e) {
 
 let i = orders.findIndex(m => m.id === e);
@@ -448,17 +471,16 @@ if(confirm('Confirm that the order has been shipped ?')===true) {
 
 orders[i].status="shipped";
 alert('please wait until you get a success message...');
-const b = new Moralis.File('i.json', {base64 : btoa(JSON.stringify(orders))})
+
+const hash = CryptoJS.AES.encrypt(JSON.stringify(orders), key, {
+  iv: iv,
+  mode: CryptoJS.mode.CBC,
+  padding: CryptoJS.pad.Pkcs7
+}).toString()
+const ordersHash = [{"hash": hash}]
+const b = new Moralis.File('i.json', {base64 : btoa(JSON.stringify(ordersHash))})
 b.saveIPFS().then(() => {
-  db.doc('orders').set({   ipfs : b.ipfs()
-  }).then(async() => {
-db.doc('orders').get().then(async (m) => {
-var a = m.data();
-const url = a.ipfs
-const response = await fetch(url);
-return response.json().then((k) => {
-  setOrders(k)
-})
+  db.doc('orders').set({ ipfs : b.ipfs() })
 })
   setNone(Date.now())
   alert('order status updated!')
