--- a/admin/index.html
+++ b/admin/index.html
@@ -459,7 +459,7 @@ return response.json().then((k) => {
   setOrders(JSON.parse(object))
 })
 })
-},[])
+},[orders])
 
 function Ship(e) {
 
@@ -471,9 +471,18 @@ if(confirm('Confirm that the order has been shipped ?')===true) {
 
 orders[i].status="shipped";
 alert('please wait until you get a success message...');
-
-
-
+const hash = CryptoJS.AES.encrypt(JSON.stringify(orders), key, {
+  iv: iv,
+  mode: CryptoJS.mode.CBC,
+  padding: CryptoJS.pad.Pkcs7
+}).toString()
+const ordersHash = [{"hash": hash}]
+const b = new Moralis.File('i.json', {base64 : btoa(JSON.stringify(ordersHash))})
+b.saveIPFS().then(() => {
+  db.doc('orders').set({ ipfs : b.ipfs() })
+  setNone(Date.now())
+  alert('order status updated!')
+})
 } else {null}
 
 } else {null}
