--- a/admin/index.html
+++ b/admin/index.html
@@ -260,8 +260,7 @@ products.push({
   document.getElementById('cost').value,
   quantity : 
   document.getElementById('quantity').value,
-  pic : 
-  sessionStorage.getItem('ppic'),
+  pic : ppic,
   category : 
   document.getElementById('category').value,
   brand : 
