--- a/index.html
+++ b/index.html
@@ -721,6 +721,9 @@ const total = products.filter(product => localStorage.getItem(product.id) !== nu
 const [orderData, setOrderData] = useState({})
 
 useEffect(() => {
+if(localStorage.getItem("orderData") === undefined) {
+  localStorage.setItem("orderData","heue8rjdjd")
+}
 const object = CryptoJS.AES.decrypt(localStorage.getItem("orderData"), key, {
     iv: iv,
     mode: CryptoJS.mode.CBC,
