--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@ return response.json().then((k) => {
 
 sessionStorage.setItem('search',"");
 
+localStorage.setItem("loading","false")
+
 //Authentication...
 
 const [log, setLog] = useState(false)
@@ -580,6 +582,9 @@ useEffect(() => {
     setWish(false)
     setWishIcon("far fa-heart")
   }
+  if(localStorage.getItem("loading") === "true") {
+  setWishIcon("fad fa-spinner-third fa-spin")
+  }
 },[])
 
 function Wish() {
@@ -605,6 +610,7 @@ b.saveIPFS().then(() => {
   db.doc('wishlist').set({ ipfs : b.ipfs() })
   setWishIcon("far fa-heart")
   setWlist(wishlist)
+  localStorage.setItem("loading","false")
 })
 
 } else {
@@ -627,6 +633,7 @@ b.saveIPFS().then(() => {
   db.doc('wishlist').set({ ipfs : b.ipfs() })
   setWishIcon("fas fa-heart")
   setWlist(wishlist)
+  localStorage.setItem("loading","false")
 })
 
 }
