--- a/index.html
+++ b/index.html
@@ -590,6 +590,7 @@ useEffect(() => {
 function Wish() {
 
 setWishIcon("fad fa-spinner-third fa-spin")
+localStorage.setItem("loading","true")
 
 if(wish === true) {
 
