--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ return response.json().then((k) => {
 })
 }, [])
 
+sessionStorage.clear();
 sessionStorage.setItem('search',"");
 
 //Authentication...
