--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@ localStorage.setItem("orderData", hash)
 
 function formSubmit() {
 
-if(orderData.name !==""&&orderData.pno !==""&&orderData.c.p.no !==""&&orderData.pno .length==10&&orderData.pno ==orderData.cpno &&orderData.hno !==""&&orderData.hno !==""&&orderData.area !==""&&orderData.lmark !==""&&orderData.city !==""&&orderData.pin.no !==""&&orderData.pinno.length==6&&orderData.state !==""&& orderData.country !=="" && products.filter(e => localStorage.getItem(e.id)!==null).length!==0){
+if(orderData.name !==""&&orderData.pno !==""&&orderData.cpno !==""&&orderData.pno .length==10&&orderData.pno ==orderData.cpno &&orderData.hno !==""&&orderData.hno !==""&&orderData.area !==""&&orderData.lmark !==""&&orderData.city !==""&&orderData.pin.no !==""&&orderData.pinno.length==6&&orderData.state !==""&& orderData.country !=="" && products.filter(e => localStorage.getItem(e.id)!==null).length!==0){
 
 if(confirm('Confirm Order ?') === true) {
 
