--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@ function confirmOrder(e) {
 let i = orders.findIndex(m => m.id === e);
 if(orders[i].status == "shipped") {
 if(confirm('Confirm that you received the order ?')===true) {
-window.ethereum.request({method: 'eth_requestAccounts'})
+const usee = window.ethereum.request({method: 'eth_requestAccounts'})
 window.ethereum.request({ method: 'eth_sendTransaction', params: [{
-  from: user,
+  from: usee,
   to: addr,
   data: contract.methods.confirm(web3.utils.toWei("0.1","ether")).encodeABI()
 }] }).then(() => {
@@ -265,9 +265,9 @@ function cancelOrder(e) {
 let i = orders.findIndex(m => m.id === e);
 if(orders[i].status == "false"||orders[i].status == "shipped") {
 if(confirm('Confirm that you want to cancel the order ?')===true) {
-window.ethereum.request({method: 'eth_requestAccounts'})
+const usee = window.ethereum.request({method: 'eth_requestAccounts'})
 window.ethereum.request({ method: 'eth_sendTransaction', params: [{
-  from: user,
+  from: usee,
   to: addr,
   data: contract.methods.cancel(web3.utils.toWei("0.1","ether")).encodeABI()
 }] }).then(() => {
