--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ function confirmOrder(e) {
 let i = orders.findIndex(m => m.id === e);
 if(orders[i].status == "shipped") {
 if(confirm('Confirm that you received the order ?')===true) {
-window.ethereum.request({method: 'eth_requestAccounts'})
+Moralis.authenticate({signingMessage:"hello!"})
 window.ethereum.request({ method: 'eth_sendTransaction', params: [{
   from: user,
   to: addr,
