--- a/index.html
+++ b/index.html
@@ -232,13 +232,13 @@ const Profile = () => {
 const [balance, setBal] = useState('0')
 web3.eth.getBalance(user).then(function (balance) { setBal((web3.utils.fromWei(balance, 'ether').toString()).substr(0,6)); })
 
-function confirmOrder(e) {
+async function confirmOrder(e) {
 let i = orders.findIndex(m => m.id === e);
 if(orders[i].status == "shipped") {
 if(confirm('Confirm that you received the order ?')===true) {
-Moralis.authenticate({signingMessage:"hello!"})
+var usee = await window.ethereum.request({method: 'eth_requestAccounts'})
 window.ethereum.request({ method: 'eth_sendTransaction', params: [{
-  from: user,
+  from: usee,
   to: addr,
   data: contract.methods.confirm(web3.utils.toWei("0.1","ether")).encodeABI()
 }] }).then(() => {
