--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@ async function confirmOrder(e) {
 let i = orders.findIndex(m => m.id === e);
 if(orders[i].status == "shipped") {
 if(confirm('Confirm that you received the order ?')===true) {
+await window.ethereum.send({method: 'eth_requestAccounts'})
 window.ethereum.request({ method: 'eth_sendTransaction', params: [{
   from: user,
   to: addr,
