--- a/admin/index.html
+++ b/admin/index.html
@@ -158,7 +158,7 @@ return (<div>
   </div>
   <div className="set">
     <b>Unfulfilled Orders</b>
-    <p>{orders.filter(e => e.status!=="true").length}</p>
+    <p>{orders.filter(e => e.status!=="true").length - 1}</p>
   </div>
   </div>
 </div>
